--- a/GURPS/gurps.html
+++ b/GURPS/gurps.html
@@ -23,19 +23,7 @@
 			<div class="content">
 				<h4>GURPS Version <input type="text" name="attr_announcement_version" readonly="readonly" value="0" title="GURPS Sheet Version" /></h4>
 				<ul>
-				    <li>This is a major update to version 2.0.0. – User interaction is required, please read the details of the changes and what you need to do under the Updates TAB.</li>
-					<li>General tab. Change layout for Turning and Deceleration table and fixed some bugs in the process.</li>
-					<li>Combat tab. Added Demolition combat tool. Code provided by Savage. Thank you Savage!</li>
-					<li>Combat tab. Thrown Object tool. Thrust damage was not updating correctly when thrust damage changed.</li>
-					<li>Combat tab. Row ID - Add related skill name and level to description. Add Reason for MOD field. Converted Weapon and Damage notes to text areas.</li>
-					<li>General tab. Added whisper to GM option for Perception roll.</li>
-					<li>Traits tab. Added repeating tables for Perks and Quirks.</li>
-					<li>General tab. Display points summary based on selected option.</li>
-					<li>Corrected a few spelling errors.</li>
-					<li>General tab. Current HP and Current FP notes. Show halved or quartered movement. Removed modifier that divided ST by 2 when HP is 1/3 or less.</li>
-					<li>Spell Rolls. Added options to enter notes for Spell Critical Success, Fail, and Critical Failure. Display spell notes on roll template.</li>
-					<li>Grimoire Tab. Update formatting repeating spells.</li>
-					<li>See Updates tab for more detailed information.</li>
+				    <li>Grimoire Tab. Repeating Spells. Fix bug where Reason MOD text and input spanned two lines.</li>
 				</ul>
 				<label class="check"><input type="checkbox" name="attr_announcements_hide" value="1">&nbsp;<b><span>Hide until next update</span></b></label>
 				<button type="action" name="act_view_updates_tab" class="reset" />View All Updates</button>
@@ -4951,6 +4939,14 @@
 	<p>Pull Request: <span name="attr_latest_changes"></span></p>
 	
 	<ul>
+		<li>Grimoire Tab. Repeating Spells. Fix bug where Reason MOD text and input spanned two lines.</li>
+	</ul>
+	
+	<h4>Version: 2.0.0</h4>
+	
+	<p>Pull Request: 01/07/2020</p>
+
+	<ul>
 		<li>This is a major update to version 2.0.0. – User interaction is required, please read the details of the changes and what you need to do under the Updates TAB.</li>
 		<li>General tab. Change layout for Turning and Deceleration table and fixed some bugs in the process.</li>
 		<li>Combat tab. Added Demolition combat tool. Code provided by Savage. Thank you Savage!</li>
@@ -6449,9 +6445,9 @@ Skull Damage x4
 
 	var noop = function () {}; // do nothing.
 
-	var version = "2.0.0";
+	var version = "2.1.0";
 	
-	var latestChangesDate = "01/07/2020";
+	var latestChangesDate = "01/28/2020";
 
 	var modCascade = true;
 	
