fixes & exp counter

--- a/Warhammer 4e Character Sheet/Warhammer 4e Character Sheet.html
+++ b/Warhammer 4e Character Sheet/Warhammer 4e Character Sheet.html
@@ -4,7 +4,7 @@
 			<div class="sheet-row">
 				<div class="sheet-col-3-10">
 					<div class="sheet-dnd-image-wrapper sheet-mar-t-sm sheet-mar-b-sm">
-						<img src="https://github.com/vicberg/Roll20-Warhammer-4e-Character-Sheet/blob/master/WHFRP.png?raw=true" height="120" width="240" alt="Warhammer Fantasy Roleplay (4th edition)">
+						<img src="https://github.com/Djjus/roll20-character-sheets/blob/master/Warhammer%204e%20Character%20Sheet/WHFRP.png?raw=true" height="120" width="240" alt="Warhammer Fantasy Roleplay (4th edition)">
 					</div>
 					<div class="sheet-mar-t-sm sheet-mar-b-sm">
 						<input class="sheet-character-name" type="text" name="attr_character_name" />
@@ -47,7 +47,7 @@
 							<div class="sheet-col-1-5 sheet-vert-middle sheet-pad-r-sm sheet-wrap-box-label" style="margin-top:3px">
 								<select class="sheet-select-no-arrow-center" name="attr_Race">
 									<option value="Human" data-i18n="HUMAN">Human</option>
-									<option value="Elf" data-i18n="HALF-ELF">Half Elf</option>
+									<option value="Elf" data-i18n="HIGH-ELF">High Elf</option>
 									<option value="Elf" data-i18n="WOOD-ELF">Wood Elf</option>
 									<option value="Dwarf" data-i18n="DWARF">Dwarf</option>
 									<option value="Halfling" data-i18n="HALFLING">Halfling</option>
@@ -87,7 +87,6 @@
 				</div>
 			</div>
 		</div>
-
 
 		<div class="sheet-row">
 			<div class="sheet-col-1-2 sheet-pad-r-sm">
@@ -3886,8 +3885,7 @@
 							<!-- MELEE SKILL SELECTION -->
 							<div class="sheet-col-16-100 sheet-pad-r-sm">
 								<select class="sheet-select-no-arrow-center sheet-select-sizing" name="attr_MeleeWeaponSkill">
-									<option value="(@{Melee})" data-i18n="MELEE" selected="selected">Melee</option>
-									<option value="(@{MeleeBasic})" data-i18n="MELEE-BASIC">Melee (Basic)</option>
+									<option value="(@{MeleeBasic})" data-i18n="MELEE-BASIC" selected="selected">Melee (Basic)</option>
 									<option value="(@{MeleeBrawling})" data-i18n="MELEE-BRAWLING">Melee (Brawling)</option>
 									<option value="(@{MeleeCavalry})" data-i18n="MELEE-CAVALRY">Melee (Cavalry)</option>
 									<option value="(@{MeleeFencing})" data-i18n="MELEE-FENCING">Melee (Fencing)</option>
@@ -3911,6 +3909,7 @@
 								<select class="sheet-select-no-arrow-center sheet-select-sizing" name="attr_MeleeReach">
 									<option data-i18n="PERSONAL">Personal</option>
 									<option data-i18n="VERY-SHORT">Very Short</option>
+									<option data-i18n="SHORT">Short</option>
 									<option data-i18n="AVERAGE">Average</option>
 									<option data-i18n="LONG">Long</option>
 									<option data-i18n="VERY-LONG">Very Long</option>
@@ -5042,7 +5041,7 @@
 								<input type="text" class="sheet-center" name="attr_spelldamage" />
 							</div>
 							<div class="sheet-col-1-10 sheet-center sheet-pad-r-sm">
-								<button type="roll" class="sheet-roll" name="roll_SpellCast" value="@{Whisper} &{template:whfrp2e} {{title=@{spellname}}} {{character_name=@{character_name}}} {{spelltype=^{PETTY-SPELL}}} {{spellrange=@{spellrange}}} {{spelltarget=@{spelltarget}}} {{spellduration=@{spellduration}}} {{target=[[{@{Intelligence}}+{@{LangMagickAdv}}+{@{LangMagickMisc}}+(@{Advantage}*10)+?{Modifier|0}]]}} {{spellcastingnumber=[[@{spellcastingnumber}]]}} {{spelldescription=@{spelldescription}}} {{test=[[1d100cs01cs11cs22cs33cs44cs55cs66cs77cs88cf100]]}}  {{spelltest=[[1d10]]}} {{hitlocation=true}} {{spelldamage=[[@{spelldamage}]]}} ">
+								<button type="roll" class="sheet-roll" name="roll_SpellCast" value="@{Whisper} &{template:whfrp2e} {{title=@{spellname}}} {{character_name=@{character_name}}} {{spelltype=^{PETTY-SPELL}}} {{spellrange=@{spellrange}}} {{spelltarget=@{spelltarget}}} {{spellduration=@{spellduration}}} {{target=[[{@{Intelligence}}+{@{LangMagickAdv}}+{@{LangMagickMisc}}+(@{Advantage}*10)+?{Modifier|0}]]}} {{spellcastingnumber=[[@{spellcastingnumber}]]}} {{spelldescription=@{spelldescription}}} {{test=[[1d100cs11cs22cs33cs44cs55cs66cs77cs88cf100]]}}  {{spelltest=[[1d10]]}} {{hitlocation=true}} {{spelldamage=[[@{spelldamage}]]}} ">
 									<span data-i18n="CAST">Cast</span>
 								</button>
 							</div>
@@ -5108,7 +5107,7 @@
 								<input type="text" class="sheet-center" name="attr_spelldamage" value="0" />
 							</div>
 							<div class="sheet-col-1-10 sheet-spell-button-group sheet-right">
-								<button type="roll" class="sheet-roll" name="roll_SpellCast" value="@{Whisper} &{template:whfrp2e} {{title=@{spellname}}} {{character_name=@{character_name}}} {{spelltype=^{ARCANE-SPELL}}} {{spellrange=@{spellrange}}} {{spelltarget=@{spelltarget}}} {{spellduration=@{spellduration}}} {{target=[[{@{Intelligence}}+{@{LangMagickAdv}}+{@{LangMagickMisc}}+(@{Advantage}*10)+?{Modifier|0}]]}} {{spellcastingnumber=[[@{spellcastingnumber}]] - [[@{spellchannelsl}]] Ch SL = [[@{spellcastingnumber}-@{spellchannelsl}]]}} {{spelldescription=@{spelldescription}}} {{test=[[1d100cs01cs11cs22cs33cs44cs55cs66cs77cs88cf100]]}}  {{spelltest=[[1d10]]}} {{hitlocation=true}} {{spelldamage=[[@{spelldamage}]]}} ">
+								<button type="roll" class="sheet-roll" name="roll_SpellCast" value="@{Whisper} &{template:whfrp2e} {{title=@{spellname}}} {{character_name=@{character_name}}} {{spelltype=^{ARCANE-SPELL}}} {{spellrange=@{spellrange}}} {{spelltarget=@{spelltarget}}} {{spellduration=@{spellduration}}} {{target=[[{@{Intelligence}}+{@{LangMagickAdv}}+{@{LangMagickMisc}}+(@{Advantage}*10)+?{Modifier|0}]]}} {{spellcastingnumber=[[@{spellcastingnumber}]] - [[@{spellchannelsl}]] Ch SL = [[@{spellcastingnumber}-@{spellchannelsl}]]}} {{spelldescription=@{spelldescription}}} {{test=[[1d100cs11cs22cs33cs44cs55cs66cs77cs88cf100]]}}  {{spelltest=[[1d10]]}} {{hitlocation=true}} {{spelldamage=[[@{spelldamage}]]}} ">
 									<span data-i18n="CAST">Cast</span>
 								</button>
 							</div>
@@ -5188,7 +5187,7 @@
 								<input type="text" class="sheet-center" name="attr_spelldamage" value="0" />
 							</div>
 							<div class="sheet-col-1-10 sheet-spell-button-group sheet-right">
-								<button type="roll" class="sheet-roll" name="roll_SpellCast" value="@{Whisper} &{template:whfrp2e} {{title=@{spellname}}} {{character_name=@{character_name}}} {{spelltype=^{DIVINE-SPELL}}} {{spellrange=@{spellrange}}} {{spelltarget=@{spelltarget}}} {{spellduration=@{spellduration}}} {{target=[[{@{Fellowship}}+{@{PrayAdv}}+{@{PrayMisc}}+?{Modifier|0}]]}} {{spellcastingnumber=[[@{spellcastingnumber}]]}} {{spelldescription=@{spelldescription}}} {{test=[[1d100cs01cs11cs22cs33cs44cs55cs66cs77cs88cf100]]}}  {{spelltest=[[1d10]]}} {{hitlocation=true}} {{spelldamage=[[@{spelldamage}]]}} ">
+								<button type="roll" class="sheet-roll" name="roll_SpellCast" value="@{Whisper} &{template:whfrp2e} {{title=@{spellname}}} {{character_name=@{character_name}}} {{spelltype=^{DIVINE-SPELL}}} {{spellrange=@{spellrange}}} {{spelltarget=@{spelltarget}}} {{spellduration=@{spellduration}}} {{target=[[{@{Fellowship}}+{@{PrayAdv}}+{@{PrayMisc}}+?{Modifier|0}]]}} {{spellcastingnumber=[[@{spellcastingnumber}]]}} {{spelldescription=@{spelldescription}}} {{test=[[1d100cs11cs22cs33cs44cs55cs66cs77cs88cf100]]}}  {{spelltest=[[1d10]]}} {{hitlocation=true}} {{spelldamage=[[@{spelldamage}]]}} ">
 									<span data-i18n="CAST">Cast</span>
 								</button>
 							</div>
