--- a/Warhammer 4e Character Sheet/Warhammer 4e Character Sheet.html
+++ b/Warhammer 4e Character Sheet/Warhammer 4e Character Sheet.html
@@ -217,7 +217,7 @@
 			</div>
 			<div class="sheet-col-1-10 sheet-center sheet-pad-r-md">
 				<div class="sheet-col-1 sheet-center sheet-pad-r-sm">
-					<button type="roll" class="sheet-roll" name="roll_CriticalRoll" value="@{Whisper} &amp;{template:whfrp2e} {{title=Critical Roll}} {{character_name=@{character_name}}} {{attacktype=^{CRITICAL}}} {{critlocation=[[?{Hit Location|Random,[[1d100]]|Head,1|Right Arm,2|Left Arm,3|Body,4|Right Leg,5|Left Leg,6}]]}} {{critroll=[[1d100]]}} {{critroll=[[[[1d100]]+?{Crit Roll Modifier|0}]]}}">
+					<button type="roll" class="sheet-roll" name="roll_CriticalRoll" value="@{Whisper} &amp;{template:whfrp2e} {{title=Critical Roll}} {{character_name=@{character_name}}} {{attacktype=^{CRITICAL}}} {{critlocation=[[?{Hit Location|Random (1d100),[[1d100]]|Head,1|Right Arm,2|Left Arm,3|Body,4|Right Leg,5|Left Leg,6}]]}} {{critroll=[[1d100]]}} {{critroll=[[[[1d100]]+?{Crit Roll Modifier|0}]]}}">
 						<span data-i18n="CRITICAL-HIT">Critical Hit</span>
 					</button>
 				</div>
@@ -858,6 +858,20 @@
 								<input class="sheet-center" type="number" name="attr_Corruption" value="0" />
 							</div>
 						</div>
+						<div class="sheet-row sheet-sub-header">
+							<div class="sheet-col-1-3 sheet-center sheet-small-label sheet-vert-middle sheet-pad-r-sm" data-i18n="DESCRIPTION">Description</div>
+							<div class="sheet-col-4-7 sheet-center sheet-small-label sheet-vert-middle sheet-pad-r-sm" data-i18n="EFFECTS">Additional Effects</div>
+						</div>
+						<fieldset class="repeating_Corruptions">
+							<div class="sheet-row">
+								<div class="sheet-col-1-3 sheet-pad-r-sm sheet-vert-middle">
+									<input class="sheet-center" type="text" name="attr_CorruptionDescription" />
+								</div>
+								<div class="sheet-col-2-3 sheet-center sheet-pad-r-sm sheet-vert-middle">
+									<textarea class="sheet-xs-textarea" type="number" name="attr_CorruptionEffects"></textarea>
+								</div>
+							</div>
+						</fieldset>
 					</div>
 					<span class="sheet-spacer"></span>
 					<div>
@@ -873,7 +887,7 @@
 							<div class="sheet-col-1-10 sheet-center sheet-small-label sheet-vert-middle sheet-pad-r-sm" data-i18n="WOUNDS">Wounds</div>
 							<div class="sheet-col-4-7 sheet-center sheet-small-label sheet-vert-middle sheet-pad-r-sm" data-i18n="EFFECTS">Additional Effects</div>
 						</div>
-						<fieldset class="repeating_ArtSpecializationr">
+						<fieldset class="repeating_Criticals">
 							<div class="sheet-row">
 								<div class="sheet-col-1-3 sheet-pad-r-sm sheet-vert-middle">
 									<input class="sheet-center" type="text" name="attr_CriticaDescription" />
@@ -5042,25 +5056,41 @@
 		<!-- SPELLBOOK TAB -->
 		<div class="sheet-section-spellbook">
 			<div class="sheet-row">
-				<div class="sheet-col-1">
+				<div class="sheet-col-1-4 sheet-pad-r-sm">
+					<h4 class="sheet-center">
+						<span data-i18n="DISPEL">Dispel</span>
+					</h4>
+				</div>
+				
+				<div class="sheet-col-3-4 sheet-pad-r-sm">
 					<h4 class="sheet-center">
 						<span data-i18n="FUMBLE">Fumble</span>
 					</h4>
 				</div>
+				
 			</div>
+			
+			
+			
+			
 			<span class="sheet-spacer"></span>
 			<div class="sheet-row">
-				<div class="sheet-col-1-3 sheet-center sheet-pad-b-md">
+				<div class="sheet-col-1-4  sheet-center sheet-pad-b-md">
+					<button type="roll" class="sheet-roll" name="roll_Wrath" value="@{Whisper} &{template:whfrp2e} {{title=^{DISPEL}}} {{character_name=@{character_name}}} {{attacktype=^{CRITICAL}}}  {{target=[[@{LangMagick}+?{@{translation_modifier}|0}]]}} {{test=[[1d100]]}} ">
+						<span data-i18n="DISPEL">Dispel</span>
+					</button>					
+				</div>
+				<div class="sheet-col-1-4 sheet-center sheet-pad-b-md">
 					<button type="roll" class="sheet-roll" name="roll_Minor" value="@{Whisper} &{template:whfrp2e} {{title=^{MINOR-MISCAST}}} {{character_name=@{character_name}}} {{attacktype=^{CRITICAL}}} {{minorroll=[[1d100]]}}">
 						<span data-i18n="MINOR-MISCAST">Minor Miscast</span>
 					</button>
-				</div>
-				<div class="sheet-col-1-3 sheet-center sheet-pad-b-md">
+				</div>		
+				<div class="sheet-col-1-4 sheet-center sheet-pad-b-md">
 					<button type="roll" class="sheet-roll" name="roll_Major" value="@{Whisper} &{template:whfrp2e} {{title=^{MAJOR-MISCAST}}} {{character_name=@{character_name}}} {{attacktype=^{CRITICAL}}} {{majorroll=[[1d100]]}}">
 						<span data-i18n="MAJOR-MISCAST">Major Miscast</span>
 					</button>
 				</div>
-				<div class="sheet-col-1-3  sheet-center sheet-pad-b-md">
+				<div class="sheet-col-1-4  sheet-center sheet-pad-b-md">
 					<button type="roll" class="sheet-roll" name="roll_Wrath" value="@{Whisper} &{template:whfrp2e} {{title=^{WRATH-OF-THE-GODS}}} {{character_name=@{character_name}}} {{attacktype=^{CRITICAL}}} {{wrathroll=[[[[1d100]]+?{Sin|0}]]}}">
 						<span data-i18n="WRATH-OF-THE-GODS">Wrath of the Gods</span>
 					</button>
@@ -5161,7 +5191,7 @@
 								<input type="text" class="sheet-center" name="attr_spelldamage" value="0" />
 							</div>
 							<div class="sheet-col-1-10 sheet-center sheet-pad-r-sm">
-								<button type="roll" class="sheet-roll" name="roll_SpellCast" value="@{Whisper} &{template:whfrp2e} {{title=@{spellname}}} {{character_name=@{character_name}}} {{spelltype=^{PETTY-SPELL}}} {{spellrange=@{spellrange}}} {{spelltarget=@{spelltarget}}} {{spellduration=@{spellduration}}} {{target=[[{@{Intelligence}}+{@{LangMagickAdv}}+{@{LangMagickMisc}}+(@{Advantage}*10)+?{Modifier|0}]]}} {{spellcastingnumber=[[@{spellcastingnumber}]]}} {{spelldescription=@{spelldescription}}} {{test=[[1d100cs11cs22cs33cs44cs55cs66cs77cs88cf100]]}}  {{spelltest=[[1d10]]}} {{hitlocation=true}} {{spelldamage=[[@{spelldamage}]]}} ">
+								<button type="roll" class="sheet-roll" name="roll_SpellCast" value="@{Whisper} &{template:whfrp2e} {{title=@{spellname}}} {{character_name=@{character_name}}} {{spelltype=^{PETTY-SPELL}}} {{spellrange=Range: @{spellrange}}} {{spelltarget=Targets: @{spelltarget}}} {{spellduration=Duration: @{spellduration}}} {{target=[[{@{Intelligence}}+{@{LangMagickAdv}}+{@{LangMagickMisc}}+(@{Advantage}*10)+?{Modifier|0}]]}} {{spelldescription=@{spelldescription}}} {{test=[[1d100cs11cs22cs33cs44cs55cs66cs77cs88cf100]]}}  {{spelltest=[[1d10]]}} {{hitlocation=true}} {{spelldamage=[[@{spelldamage}]]}} ">
 									<span data-i18n="CAST">Cast</span>
 								</button>
 							</div>
@@ -5171,7 +5201,6 @@
 								<div class="sheet-small-label sheet-pad-b-sm">
 									<span data-i18n="SPELL-DESCRIPTION">Spell Description</span>
 								</div>
-								<input type="hidden" name="attr_spellcastingnumber" value="0" />
 								<textarea class="sheet-small-textarea-resize" name="attr_spelldescription"></textarea>
 							</div>
 						</div>
@@ -5377,7 +5406,7 @@
 								<input type="text" class="sheet-center" name="attr_spelldamage" value="0" />
 							</div>
 							<div class="sheet-col-1-10 sheet-spell-button-group sheet-right">
-								<button type="roll" class="sheet-roll" name="roll_SpellCast" value="@{Whisper} &{template:whfrp2e} {{title=@{spellname}}} {{character_name=@{character_name}}} {{spelltype=^{ARCANE-SPELL}}} {{spellrange=@{spellrange}}} {{spelltarget=@{spelltarget}}} {{spellduration=@{spellduration}}} {{target=[[{@{Intelligence}}+{@{LangMagickAdv}}+{@{LangMagickMisc}}+(@{Advantage}*10)+?{Modifier|0}]]}} {{spellcastingnumber=[[@{spellcastingnumber}]] - [[@{spellchannelsl}]] Ch SL = [[@{spellcastingnumber}-@{spellchannelsl}]]}} {{spelldescription=@{spelldesc}}} {{test=[[1d100cs11cs22cs33cs44cs55cs66cs77cs88cf100]]}} {{spelltest=[[1d10]]}} {{hitlocation=true}} {{spelldamage=[[@{spelldamage}]]}} ">
+								<button type="roll" class="sheet-roll" name="roll_SpellCast" value="@{Whisper} &{template:whfrp2e} {{title=@{spellname}}} {{character_name=@{character_name}}} {{spelltype=^{ARCANE-SPELL}}} {{spellrange=Range: @{spellrange}}} {{spelltarget=Targets: @{spelltarget}}} {{spellduration=Duration: @{spellduration}}} {{target=[[{@{Intelligence}}+{@{LangMagickAdv}}+{@{LangMagickMisc}}+(@{Advantage}*10)+?{Modifier|0}]]}} {{spellcastingnumber=[[@{spellcastingnumber}]] - [[@{spellchannelsl}]] Ch SL = [[@{spellcastingnumber}-@{spellchannelsl}]]}} {{spelldescription=@{spelldesc}}} {{test=[[1d100cs11cs22cs33cs44cs55cs66cs77cs88cf100]]}} {{spelltest=[[1d10]]}} {{hitlocation=true}} {{spelldamage=[[@{spelldamage}]]}} ">
 									<span data-i18n="CAST">Cast</span>
 								</button>
 							</div>
@@ -5469,7 +5498,7 @@
 								<input type="text" class="sheet-center" name="attr_blessingtarget" />
 							</div>
 							<div class="sheet-col-1-10 sheet-spell-button-group sheet-right">
-								<button type="roll" class="sheet-roll" name="roll_SpellCast" value="@{Whisper} &{template:whfrp2e} {{title=@{blessingname}}} {{character_name=@{character_name}}} {{spelltype=^{DIVINE-SPELL}}} {{spellrange=@{blessingrange}}} {{spelltarget=@{blessingtarget}}} {{spellduration=@{blessingduration}}} {{target=[[{@{Fellowship}}+{@{PrayAdv}}+{@{PrayMisc}}+?{Modifier|0}]]}} {{spelldescription=@{blessingdesc}}} {{test=[[1d100cs11cs22cs33cs44cs55cs66cs77cs88cs99cf100]]}}  {{spelltest=[[1d10]]}} {{hitlocation=true}}">
+								<button type="roll" class="sheet-roll" name="roll_SpellCast" value="@{Whisper} &{template:whfrp2e} {{title=@{blessingname}}} {{character_name=@{character_name}}} {{spelltype=^{DIVINE-SPELL}}} {{spellrange=Range: @{blessingrange}}} {{spelltarget=Targets: @{blessingtarget}}} {{spellduration=Duration: @{blessingduration}}} {{target=[[{@{Fellowship}}+{@{PrayAdv}}+{@{PrayMisc}}+?{Modifier|0}]]}} {{spelldescription=@{blessingdesc}}} {{test=[[1d100cs11cs22cs33cs44cs55cs66cs77cs88cs99cf100]]}}  {{spelltest=[[1d10]]}}">
 									<span data-i18n="CAST">Cast</span>
 								</button>
 							</div>
@@ -5611,7 +5640,7 @@
 								<input type="text" class="sheet-center" name="attr_miracledamage" value="0" />
 							</div>
 							<div class="sheet-col-1-10 sheet-spell-button-group sheet-right">
-								<button type="roll" class="sheet-roll" name="roll_SpellCast" value="@{Whisper} &{template:whfrp2e} {{title=@{miraclename}}} {{character_name=@{character_name}}} {{spelltype=^{DIVINE-SPELL}}} {{spellrange=Range: @{miraclerange}}} {{spelltarget=Targets: @{miracletarget}}} {{spellduration=Duration: @{miracleduration}}} {{target=[[{@{Fellowship}}+{@{PrayAdv}}+{@{PrayMisc}}+?{Modifier|0}]]}} {{spellcastingnumber=[[@{spellcastingnumber}]]}} {{spelldescription=@{miracledesc}}} {{test=[[1d100cs11cs22cs33cs44cs55cs66cs77cs88cs99cf100]]}}  {{spelltest=[[1d10]]}} {{hitlocation=true}} {{spelldamage=[[@{miracledamage}]]}} ">
+								<button type="roll" class="sheet-roll" name="roll_SpellCast" value="@{Whisper} &{template:whfrp2e} {{title=@{miraclename}}} {{character_name=@{character_name}}} {{spelltype=^{DIVINE-SPELL}}} {{spellrange=Range: @{miraclerange}}} {{spelltarget=Targets: @{miracletarget}}} {{spellduration=Duration: @{miracleduration}}} {{target=[[{@{Fellowship}}+{@{PrayAdv}}+{@{PrayMisc}}+?{Modifier|0}]]}} {{spelldescription=@{miracledesc}}} {{test=[[1d100cs11cs22cs33cs44cs55cs66cs77cs88cs99cf100]]}}  {{spelltest=[[1d10]]}} {{hitlocation=true}} {{spelldamage=[[@{miracledamage}]]}} ">
 									<span data-i18n="CAST">Cast</span>
 								</button>
 							</div>
@@ -8160,12 +8189,14 @@
 											<div class="sheet-col-11-24 sheet-pad-l-md sheet-pad-r-md sheet-rt-key" data-i18n="CASTING-NUMBER">Casting Number</div>
 											<div class="sheet-col-13-24 sheet-pad-r-sm sheet-smaller-letter-spacing sheet-rt-value">{{spellcastingnumber}}</div>
 										</div>
+										{{/spellcastingnumber}}
 										{{#spelldescription}}
 										<div class="sheet-row">
 											<div class="sheet-col-1 sheet-pad-l-md sheet-pad-r-md sheet-rt-key-wide" data-i18n="SPELL-DESCRIPTION">Spell Description</div>
 											<div class="sheet-col-1 sheet-pad-l-md sheet-pad-r-md sheet-rt-value">{{spelldescription}}</div>
 										</div>
 										{{/spelldescription}}
+										{{#hitlocation}}
 										{{#rollBetween() hitlocation 1 09}}
 										<div class="sheet-row">
 											<div class="sheet-col-11-24 sheet-pad-l-md sheet-pad-r-md sheet-rt-key" data-i18n="HIT-LOCATION">Hit Location</div>
@@ -8202,13 +8233,13 @@
 											<div class="sheet-col-13-24 sheet-pad-l-md sheet-pad-r-md sheet-rt-value" data-i18n="HIT-RIGHT-LEG">Hit Right Leg</div>
 										</div>
 										{{/rollBetween() hitlocation 90 100}}
+										{{/hitlocation}}										
 										{{#spelldamage}}
 										<div class="sheet-row">
 											<div class="sheet-col-11-24 sheet-pad-l-md sheet-pad-r-md sheet-rt-key" data-i18n="DAMAGE">Damage</div>
 											<div class="sheet-col-13-24 sheet-pad-r-sm sheet-rt-value">{{spelldamage}}</div>
 										</div>
 										{{/spelldamage}}
-										{{/spellcastingnumber}}
 
 										<!-- RUNE TEMPLATE -->
 										{{#runeinscribenumber}}
