--- a/Knight/knight.html
+++ b/Knight/knight.html
@@ -989,8 +989,8 @@
 		{
 			setAttrs
 			({
-				monkSalveEffets: "Parasitage 1 / Dispersion 6 / Ultraviolence / Destructeur",
-				monkVagueEffets: "Parasitage 4 / Dispersion 3 / Choc 2",
+				monkSalveEffets: "Parasitage 1 / Dispersion 6 / Ultraviolence / Meurtrier",
+				monkVagueEffets: "Parasitage 4 / Dispersion 3 / Destructeur / Choc 2",
 				monkRayonEffets: "Parasitage 1 / Ignore Armure"
 			});
 		}
@@ -998,8 +998,8 @@
 		{
 			setAttrs
 			({
-				monkSalveEffets: "Parasitage 1 / Dispersion 3 / Ultraviolence / Destructeur",
-				monkVagueEffets: "Parasitage 2 / Dispersion 3 / Choc 2",
+				monkSalveEffets: "Parasitage 1 / Dispersion 3 / Ultraviolence / Meurtrier",
+				monkVagueEffets: "Parasitage 2 / Dispersion 3 / Destructeur / Choc 2",
 				monkRayonEffets: "Parasitage 1 / Perce Armure 40"
 			});
 		}
@@ -3004,6 +3004,33 @@
 					});
 				});
 				setAttrs({DruidLionBF: 1});
+			}
+		});
+	});
+	
+	on("sheet:opened",function()
+	{		
+		getAttrs(["monk250PG"], function(v)
+		{
+			var NV = v["monk250PG"];
+	
+			if(NV == 1)
+			{
+				setAttrs
+				({
+					monkSalveEffets: "Parasitage 1 / Dispersion 6 / Ultraviolence / Meurtrier",
+					monkVagueEffets: "Parasitage 4 / Dispersion 3 / Destructeur / Choc 2",
+					monkRayonEffets: "Parasitage 1 / Ignore Armure"
+				});
+			}
+			else
+			{
+				setAttrs
+				({
+					monkSalveEffets: "Parasitage 1 / Dispersion 3 / Ultraviolence / Meurtrier",
+					monkVagueEffets: "Parasitage 2 / Dispersion 3 / Destructeur / Choc 2",
+					monkRayonEffets: "Parasitage 1 / Perce Armure 40"
+				});
 			}
 		});
 	});
@@ -6205,7 +6232,7 @@ Attention : l’effet ne peut pas se cumuler alors que la cible est déjà sous 
 								<div>
 									<h4 class="titre bouton">
 										Vague d'énergie
-										<button type="roll" name="attr_monkJetVague" class="boutonBase" value="@{jetGM} &{template:monk} {{Nom=@{name}}} @{caracteristique1Monk} @{jetModifDes}+@{styleSimple}+ @{caracteristique2Monk} {{situationnel=[[@{jetModifDes}]]}} {{@{styleCombat}=@{styleCombat}}} {{style=@{styleCombat}}} {{styleDgtBM=[[(@{monkVagueDegatDes})d6]]}} {{styleViolBM=[[ [[(floor([[@{monkVagueDegatDes}]]/2))]]d6]]}} {{Arme=Vague d'énergie}} {{Portee=@{monkVaguePortee}}} {{Degats=[[(@{monkVagueDegatDes})D6]]}} {{Violence=[[(@{monkVagueDegatDes})D6]]}} {{Effets=@{monkVagueEffets}}}" />
+										<button type="roll" name="attr_monkJetVague" class="boutonBase" value="@{jetGM} &{template:monk} {{Nom=@{name}}} @{caracteristique1Monk} @{jetModifDes}+@{styleSimple}+ @{caracteristique2Monk} {{situationnel=[[@{jetModifDes}]]}} {{@{styleCombat}=@{styleCombat}}} {{style=@{styleCombat}}} {{styleDgtBM=[[(@{monkVagueDegatDes})d6]]}} {{styleViolBM=[[ [[(floor([[@{monkVagueDegatDes}]]/2))]]d6]]}} {{Arme=Vague d'énergie}} {{Portee=@{monkVaguePortee}}} {{Degats=[[(@{monkVagueDegatDes})D6]]}} {{Violence=[[(@{monkVagueDegatDes})D6]]}} {{Effets=Parasitage [[@{monkParasitageVagueValue}]] / Dispersion 3 / Choc 2}} {{destructeur=[[2D6]]}}" />
 									</h4>
 									<h4>Dégâts</h4>
 									<h4>Violence</h4>
@@ -6220,7 +6247,7 @@ Attention : l’effet ne peut pas se cumuler alors que la cible est déjà sous 
 								</div>
 								<div class="autoex autoex22">
 									<span name="attr_monkVagueEffets"></span>
-									<textarea name="attr_monkVagueEffets" readonly>Parasitage 2 / Dispersion 3 / Choc 2</textarea>
+									<textarea name="attr_monkVagueEffets" readonly>Parasitage 2 / Dispersion 3 / Destructeur / Choc 2</textarea>
 								</div>
 							</div>
 							
@@ -6231,7 +6258,7 @@ Attention : l’effet ne peut pas se cumuler alors que la cible est déjà sous 
 								<div>
 									<h4 class="titre bouton">
 										Salve d'énergie
-										<button type="roll" name="attr_monkJetSalve" class="boutonBase" value="@{jetGM} &{template:monk} {{Nom=@{name}}} @{caracteristique1Monk} @{jetModifDes}+@{styleSimple}+ @{caracteristique2Monk} {{situationnel=[[@{jetModifDes}]]}} {{@{styleCombat}=@{styleCombat}}} {{style=@{styleCombat}}} {{styleDgtBM=[[(@{monkSalveDegatDes})d6]]}} {{styleViolBM=[[ [[(floor([[@{monkSalveDegatDes}]]/2))]]d6]]}} {{Arme=Salve d'énergie}} {{Portee=@{monkSalvePortee}}} {{Degats=[[(@{monkSalveDegatDes})D6]]}} {{Violence=[[(@{monkSalveDegatDes})D6]]}} {{Effets=Parasitage 1 / Dispersion [[@{monkDispersionSalveValue}]]}} {{ultraviolence=[[2D6]]}} {{destructeur=[[2D6]]}}" />
+										<button type="roll" name="attr_monkJetSalve" class="boutonBase" value="@{jetGM} &{template:monk} {{Nom=@{name}}} @{caracteristique1Monk} @{jetModifDes}+@{styleSimple}+ @{caracteristique2Monk} {{situationnel=[[@{jetModifDes}]]}} {{@{styleCombat}=@{styleCombat}}} {{style=@{styleCombat}}} {{styleDgtBM=[[(@{monkSalveDegatDes})d6]]}} {{styleViolBM=[[ [[(floor([[@{monkSalveDegatDes}]]/2))]]d6]]}} {{Arme=Salve d'énergie}} {{Portee=@{monkSalvePortee}}} {{Degats=[[(@{monkSalveDegatDes})D6]]}} {{Violence=[[(@{monkSalveDegatDes})D6]]}} {{Effets=Parasitage 1 / Dispersion [[@{monkDispersionSalveValue}]]}} {{ultraviolence=[[2D6]]}} {{meurtrier=[[2D6]]}}" />
 									</h4>
 									<h4>Dégâts</h4>
 									<h4>Violence</h4>
@@ -6246,7 +6273,7 @@ Attention : l’effet ne peut pas se cumuler alors que la cible est déjà sous 
 								</div>
 								<div class="autoex autoex22">
 									<span name="attr_monkSalveEffets"></span>
-									<textarea name="attr_monkSalveEffets" readonly>Parasitage 1 / Dispersion 3 / Ultraviolence / Destructeur</textarea>
+									<textarea name="attr_monkSalveEffets" readonly>Parasitage 1 / Dispersion 3 / Ultraviolence / Meurtrier</textarea>
 								</div>
 							</div>
 							
@@ -24110,7 +24137,15 @@ Attention : l’effet ne peut pas se cumuler alors que la cible est déjà sous 
 				<h5 class="W80">+Destructeur</h5>
 				<h5 class="W20 textCenter">{{destructeur}}</h5>
 			</div>
-		{{/destructeur}}	
+		{{/destructeur}}
+		
+		{{#meurtrier}}
+			<div>
+				<h5 class="W80">+Meurtrier</h5>
+				<h5 class="W20 textCenter">{{meurtrier}}</h5>
+			</div>
+		{{/meurtrier}}
+		
 		{{^modeZen}}
 		<div>
 			<h4 class="W80">Violence</h4>
