--- a/Anima-Beyond-Fantasy/A-BF.html
+++ b/Anima-Beyond-Fantasy/A-BF.html
@@ -1186,7 +1186,7 @@
 	});
 	
 	//Initiative
-	on("change:agi_mod change:dex_mod change:repeating_initiative:init_armor change:repeating_initiative:init_weapon change:repeating_initiative:init_special change:classe_Init_Sum change:ki_increasedSpeed change:aam change:AMTransDraSceaux sheet:opened", function ()
+	on("change:agi_mod change:dex_mod change:repeating_initiative change:classe_Init_Sum change:ki_increasedSpeed change:aam change:AMTransDraSceaux sheet:opened", function ()
 	{
 		
 		getSectionIDs("repeating_initiative", function (ids) 
