ChroniquesOubliees: version 3.0, with corrected sheet type

--- a/ChroniquesOubliees/co.htm
+++ b/ChroniquesOubliees/co.htm
@@ -36,8 +36,8 @@
       </table>
     </div>
   </div> <!-- FIN Identité -->
-  <input type="radio" name="attr_type_fiche" class="hidden-tab fp1" value="PJ" checked="checked"><span title="Personnage"></span>
-  <input type="radio" name="attr_type_fiche" class="hidden-tab fp2" value="PNJ"><span title="PNJ"></span>
+  <input type="radio" name="attr_type_personnage" class="hidden-tab fp1" value="PJ" checked="checked"><span title="Personnage"></span>
+  <input type="radio" name="attr_type_personnage" class="hidden-tab fp2" value="PNJ"><span title="PNJ"></span>
   <div class="tab-content fp1">
     <input type="radio" name="attr_tab" class="tab tab1" value="caracteristiques" checked="checked"><span title="Caractéristiques"></span>
     <input type="radio" name="attr_tab" class="tab tab2" value="Capacites"><span title="Capacités"></span>
@@ -1042,9 +1042,6 @@
 
 
   on('change:type_personnage', function(eventinfo) {
-    setAttrs({
-      type_fiche: eventinfo.newValue
-    });
     //Conversion quand on passe de PJ à PNJ
     if (eventinfo.newValue == 'PNJ') {
       getAttrs(
