FIX - incorrect repeating ID
The repeating_vecus_passe line 214 is forbidden as state here https://wiki.roll20.net/Building_Character_Sheets#Repeating_Sections and should be modified into repeating_vecus-passe

--- a/nephilimV5-vf/nephilim-legende-vf.html
+++ b/nephilimV5-vf/nephilim-legende-vf.html
@@ -211,7 +211,7 @@
         </div>
         <div class="sheet-box sheet-col">
             <h3> vécus passé</h3>
-            <fieldset class="repeating_vecus_passe">
+            <fieldset class="repeating_vecus-passe">
                 <input type="text" name="attr_vecus-passe" type="text" /><input class="sheet-rond" name="attr_degres_vecu_passe" type="number" />
             </fieldset>
         </div>
