CWoD-Vampire 20th: small translation & visual fixes to recent update

--- a/CWOD-V20/V20.html
+++ b/CWOD-V20/V20.html
@@ -123,7 +123,7 @@
         <div class="sheet-col" style="width:33%">
 			<table>
 				<tr>
-					<td style="width:30%" data-i18n="strength-u"><h4>Strength</h4></td>
+					<td style="width:30%"><h4 data-i18n="strength-u">Strength</h4></td>
 					<td style="width:30%">
                     <select class="sheet-dots" name="attr_Strength">
                         <option value="0">0&#9898;&#9898;&#9898;&#9898;&#9898;</option>
@@ -143,7 +143,7 @@
 					</td>
 				</tr>
 				<tr>
-					<td style="width:30%" data-i18n="dexterity-u"><h4>Dexterity</h4></td>
+					<td style="width:30%"><h4 data-i18n="dexterity-u">Dexterity</h4></td>
 					<td style="width:30%">
     				<select class="sheet-dots" name="attr_Dexterity">
                         <option value="0">0&#9898;&#9898;&#9898;&#9898;&#9898;</option>
@@ -163,7 +163,7 @@
 					</td>
 				</tr>
 				<tr>
-					<td style="width:30%" data-i18n="stamina-u"><h4>Stamina</h4></td>
+					<td style="width:30%"><h4 data-i18n="stamina-u">Stamina</h4></td>
 					<td style="width:30%">
     				<select class="sheet-dots" name="attr_Stamina">
                         <option value="0">0&#9898;&#9898;&#9898;&#9898;&#9898;</option>
@@ -187,7 +187,7 @@
         <div class="sheet-col" style="width:33%">
 			<table>
 				<tr>
-					<td style="width:30%" data-i18n="charisma-u"><h4>Charisma</h4></td>
+					<td style="width:30%"><h4 data-i18n="charisma-u">Charisma</h4></td>
 					<td style="width:30%">
     				<select class="sheet-dots" name="attr_Charisma">
                         <option value="0">0&#9898;&#9898;&#9898;&#9898;&#9898;</option>
@@ -207,7 +207,7 @@
 					</td>
 				</tr>
 				<tr>
-					<td style="width:30%" data-i18n="manipulation-u"><h4>Manipulation</h4></td>
+					<td style="width:30%"><h4 data-i18n="manipulation-u">Manipulation</h4></td>
 					<td style="width:30%">
     				<select class="sheet-dots" name="attr_Manipulation">
                         <option value="0">0&#9898;&#9898;&#9898;&#9898;&#9898;</option>
@@ -227,7 +227,7 @@
 					</td>
 				</tr>
 				<tr>
-					<td style="width:30%" data-i18n="appearance-u"><h4>Appearance</h4></td>
+					<td style="width:30%"><h4 data-i18n="appearance-u">Appearance</h4></td>
 					<td style="width:30%">
     				<select class="sheet-dots" name="attr_Appearance">
                         <option value="0">0&#9898;&#9898;&#9898;&#9898;&#9898;</option>
@@ -251,7 +251,7 @@
         <div class="sheet-col" style="width:33%">
 			<table>
 				<tr>
-					<td style="width:30%" data-i18n="perception-u"><h4>Perception</h4></td>
+					<td style="width:30%"><h4 data-i18n="perception-u">Perception</h4></td>
 					<td style="width:30%">
     				<select class="sheet-dots" name="attr_Perception">
                         <option value="0">0&#9898;&#9898;&#9898;&#9898;&#9898;</option>
@@ -271,7 +271,7 @@
 					</td>
 				</tr>
 				<tr>
-					<td style="width:30%" ><h4>Intelligence</h4></td>
+					<td style="width:30%"><h4 data-i18n="intelligence-u">Intelligence</h4></td>
 					<td style="width:30%">
     				<select class="sheet-dots" name="attr_Intelligence">
                         <option value="0">0&#9898;&#9898;&#9898;&#9898;&#9898;</option>
@@ -291,7 +291,7 @@
 					</td>
 				</tr>
 				<tr>
-					<td style="width:30%" data-i18n="wits-u"><h4>Wits</h4></td>
+					<td style="width:30%"><h4 data-i18n="wits-u">Wits</h4></td>
 					<td style="width:30%">
     				<select class="sheet-dots" name="attr_Wits">
                         <option value="0">0&#9898;&#9898;&#9898;&#9898;&#9898;</option>
@@ -602,7 +602,7 @@
         <div class="sheet-col" style="width:33%">
 			<table style="width:100%">
 				<tr>
-				<td style="width:30%" data-i18n="animalken-u"><h4 >Animal Ken</h4></td>
+				<td style="width:30%" ><h4 data-i18n="animalken-u">Animal Ken</h4></td>
 				<td style="width:35%">
     				<select class="sheet-dots" name="attr_AnimalKen">
                         <option value="0" selected>&#9898;&#9898;&#9898;&#9898;&#9898;</option>
@@ -662,7 +662,7 @@
 					</td>
 				</tr>
 				<tr>
-					<td style="width:30%" data-i18n="etiquette-u"><h4 >Etiquette</h4></td>
+					<td style="width:30%"><h4 data-i18n="etiquette-u">Etiquette</h4></td>
 					<td style="width:30%">
     				<select class="sheet-dots" name="attr_Etiquette">
                         <option value="0" selected>&#9898;&#9898;&#9898;&#9898;&#9898;</option>
@@ -682,7 +682,7 @@
 					</td>
 				</tr>
 				<tr>
-					<td style="width:30%" data-i18n="firearms-u"><h4 >Firearms</h4></td>
+					<td style="width:30%"><h4 data-i18n="firearms-u">Firearms</h4></td>
 					<td style="width:30%">
     				<select class="sheet-dots" name="attr_Firearms">
                         <option value="0" selected>&#9898;&#9898;&#9898;&#9898;&#9898;</option>
@@ -702,7 +702,7 @@
 					</td>
 				</tr>
 				<tr>
-					<td style="width:30%" data-i18n="larceny-u"><h4 >Larceny</h4></td>
+					<td style="width:30%"><h4 data-i18n="larceny-u">Larceny</h4></td>
 					<td style="width:30%">
     				<select class="sheet-dots" name="attr_Larceny">
                         <option value="0" selected>&#9898;&#9898;&#9898;&#9898;&#9898;</option>
@@ -722,7 +722,7 @@
 					</td>
 				</tr>
 				<tr>
-					<td style="width:30%" data-i18n="melee-u"><h4 >Melee</h4></td>
+					<td style="width:30%"><h4 data-i18n="melee-u">Melee</h4></td>
 					<td style="width:30%">
     				<select class="sheet-dots" name="attr_Melee">
                         <option value="0" selected>&#9898;&#9898;&#9898;&#9898;&#9898;</option>
@@ -742,7 +742,7 @@
 					</td>
 				</tr>
 				<tr>
-					<td style="width:30%" data-i18n="performance-u"><h4 >Performance</h4></td>
+					<td style="width:30%"><h4 data-i18n="performance-u">Performance</h4></td>
 					<td style="width:30%">
     				<select class="sheet-dots" name="attr_Performance">
                         <option value="0" selected>&#9898;&#9898;&#9898;&#9898;&#9898;</option>
@@ -762,7 +762,7 @@
 					</td>
 				</tr>
 				<tr>
-					<td style="width:30%" data-i18n="stealth-u"><h4 >Stealth</h4></td>
+					<td style="width:30%"><h4 data-i18n="stealth-u">Stealth</h4></td>
 					<td style="width:30%">
     				<select class="sheet-dots" name="attr_Stealth">
                         <option value="0" selected>&#9898;&#9898;&#9898;&#9898;&#9898;</option>
@@ -782,7 +782,7 @@
 					</td>
 				</tr>
 				<tr>
-					<td style="width:30%" data-i18n="survival-u"><h4 >Survival</h4></td>
+					<td style="width:30%"><h4 data-i18n="survival-u">Survival</h4></td>
 					<td style="width:30%">
     				<select class="sheet-dots" name="attr_Survival">
                         <option value="0" selected>&#9898;&#9898;&#9898;&#9898;&#9898;</option>
@@ -872,7 +872,7 @@
         <div class="sheet-col" style="width:33%">
 			<table style="width:100%">
 				<tr>
-				<td style="width:30%" data-i18n="academics-u"><h4 >Academics</h4></td>
+				<td style="width:30%"><h4 data-i18n="academics-u">Academics</h4></td>
 				<td style="width:30%">
     				<select class="sheet-dots" name="attr_Academics">
                         <option value="0" selected>&#9898;&#9898;&#9898;&#9898;&#9898;</option>
@@ -892,7 +892,7 @@
 				</td>
 				</tr>
 				<tr>
-					<td style="width:30%" data-i18n="computer-u"><h4 >Computer</h4></td>
+					<td style="width:30%"><h4 data-i18n="computer-u">Computer</h4></td>
 					<td style="width:30%">
     				<select class="sheet-dots" name="attr_Computer">
                         <option value="0" selected>&#9898;&#9898;&#9898;&#9898;&#9898;</option>
@@ -912,7 +912,7 @@
 					</td>
 				</tr>
 				<tr>
-					<td style="width:30%" data-i18n="finance-u"><h4 >Finance</h4></td>
+					<td style="width:30%"><h4 data-i18n="finance-u">Finance</h4></td>
 					<td style="width:30%">
     				<select class="sheet-dots" name="attr_Finance">
                         <option value="0" selected>&#9898;&#9898;&#9898;&#9898;&#9898;</option>
@@ -932,7 +932,7 @@
 					</td>
 				</tr>
 				<tr>
-					<td style="width:30%" data-i18n="investigation-u"><h4 >Investigation</h4></td>
+					<td style="width:30%"><h4 data-i18n="investigation-u">Investigation</h4></td>
 					<td style="width:30%">
     				<select class="sheet-dots" name="attr_Investigation">
                         <option value="0" selected>&#9898;&#9898;&#9898;&#9898;&#9898;</option>
@@ -952,7 +952,7 @@
 					</td>
 				</tr>
 				<tr>
-					<td style="width:30%" data-i18n="law-u"><h4 >Law</h4></td>
+					<td style="width:30%"><h4 data-i18n="law-u">Law</h4></td>
 					<td style="width:30%">
     				<select class="sheet-dots" name="attr_Law">
                         <option value="0" selected>&#9898;&#9898;&#9898;&#9898;&#9898;</option>
@@ -972,7 +972,7 @@
 					</td>
 				</tr>
 				<tr>
-					<td style="width:30%" data-i18n="medicine-u"><h4 >Medicine</h4></td>
+					<td style="width:30%"><h4 data-i18n="medicine-u">Medicine</h4></td>
 					<td style="width:30%">
     				<select class="sheet-dots" name="attr_Medicine">
                         <option value="0" selected>&#9898;&#9898;&#9898;&#9898;&#9898;</option>
@@ -992,7 +992,7 @@
 					</td>
 				</tr>
 				<tr>
-					<td style="width:30%" data-i18n="occult-u"><h4 >Occult</h4></td>
+					<td style="width:30%"><h4 data-i18n="occult-u">Occult</h4></td>
 					<td style="width:30%">
     				<select class="sheet-dots" name="attr_Occult">
                         <option value="0" selected>&#9898;&#9898;&#9898;&#9898;&#9898;</option>
@@ -1012,7 +1012,7 @@
 					</td>
 				</tr>
 				<tr>
-					<td style="width:30%" data-i18n="politics-u"><h4 >Politics</h4></td>
+					<td style="width:30%"><h4 data-i18n="politics-u">Politics</h4></td>
 					<td style="width:30%">
     				<select class="sheet-dots" name="attr_Politics">
                         <option value="0" selected>&#9898;&#9898;&#9898;&#9898;&#9898;</option>
@@ -1032,7 +1032,7 @@
 					</td>
 				</tr>
 				<tr>
-					<td style="width:30%" data-i18n="science-u"><h4 >Science</h4></td>
+					<td style="width:30%"><h4 data-i18n="science-u">Science</h4></td>
 					<td style="width:30%">
     				<select class="sheet-dots" name="attr_Science">
                         <option value="0" selected>&#9898;&#9898;&#9898;&#9898;&#9898;</option>
@@ -1052,7 +1052,7 @@
 					</td>
 				</tr>
 				<tr>
-					<td style="width:30%" data-i18n="technology-u"><h4 >Technology</h4></td>
+					<td style="width:30%"><h4 data-i18n="technology-u">Technology</h4></td>
 					<td style="width:30%">
     				<select class="sheet-dots" name="attr_Technology">
                         <option value="0" selected>&#9898;&#9898;&#9898;&#9898;&#9898;</option>
