FL updated selector
- added "+0" to a few selectors for sheet uniformity.

--- a/Forbidden_Lands/Forbidden_Lands.htm
+++ b/Forbidden_Lands/Forbidden_Lands.htm
@@ -1175,7 +1175,7 @@
                             <option value="3">+3</option>
                             <option value="2">+2</option>
                             <option value="1">+1</option>
-                            <option value="0" selected>0</option>
+                            <option value="0" selected>+0</option>
                             <option value="-1">-1</option>
                             <option value="-2">-2</option>
                             <option value="-3">-3</option>
@@ -1223,7 +1223,7 @@
                                 <option value="3">+3</option>
                                 <option value="2">+2</option>
                                 <option value="1">+1</option>
-                                <option value="0" selected>0</option>
+                                <option value="0" selected>+0</option>
                                 <option value="-1">-1</option>
                                 <option value="-2">-2</option>
                                 <option value="-3">-3</option>
@@ -1303,7 +1303,7 @@
                             <option value="3">+3</option>
                             <option value="2">+2</option>
                             <option value="1">+1</option>
-                            <option value="0" selected>0</option>
+                            <option value="0" selected>+0</option>
                             <option value="-1">-1</option>
                             <option value="-2">-2</option>
                             <option value="-3">-3</option>
