add static skill

--- a/ButterflyAspect/ButterflyAspect.html
+++ b/ButterflyAspect/ButterflyAspect.html
@@ -135,18 +135,30 @@
 			<div>Roll</div>
 		</div>
 		<div class="sheet-gridplace">
+
+			<div class="repcontainer" data-groupname="repeating_basicskills">
+				<div class="repitem" data-reprowid="-LqmJZp6DZSuTu37ytv5">
+					<div><input class="sheet-textcenter" type="text" name="attr_statikskillname" value="Ressourcen" /></div>
+					<div>-</div>
+					<div><input type="number" name="attr_statikskill" value="0"></div>
+					<div><input type="number" name="attr_statikskill_mod" value="0"></div>
+					<div>-</div>
+					<div><button type="roll" name="roll_statikskill" value="@{abilityroll} würfelt @{statikskillname} mit dem Ergebniss [[(@{statikskill})d10!! + @{statikskill_mod} + ?{Modifier?|0}]]" class="btn ui-draggable"></button></div>
+				</div>
+			</div>
+
 			<fieldset class="repeating_basicskills">
 				<div><input class="sheet-textcenter" type="text" name="attr_skillname" /></div>
 				<div>
 				  <select name="attr_attribut">
-					  <option value="@{Na}">Nahkampf</option>
-					  <option value="@{Fe}">Fernkampf</option>
-					  <option value="@{Ge}">Geschick</option>
-					  <option value="@{Wa}">Wahrnehmung</option>
-					  <option value="@{Ko}">Konstitution</option>
-					  <option value="@{in}">Intelligenz</option>
-					  <option value="@{Wi}">Wissen</option>
-					  <option value="@{Ca}">Charisma</option>
+						<option value="@{Na}">Nahkampf</option>
+						<option value="@{Fe}">Fernkampf</option>
+						<option value="@{Ge}">Geschick</option>
+						<option value="@{Wa}">Wahrnehmung</option>
+						<option value="@{Ko}">Konstitution</option>
+						<option value="@{in}">Intelligenz</option>
+						<option value="@{Wi}">Wissen</option>
+						<option value="@{Ca}">Charisma</option>
 				  </select>
 				</div>
 				<div><input type="number" name="attr_skill" value="0" /></div>
